--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "author": "Microsoft",
     "scripts": {
         "start": "node index.js"
+    },
+    "dependencies": {
+        "node-static": "^0.7.11"
     }
 }
