--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "start": "node index.js"
     },
     "dependencies": {
+        "body-parser": "^1.18.3",
+        "cookie-parser": "^1.4.4",
+        "express": "^4.16.4",
+        "multer": "^1.4.1",
         "node-static": "^0.7.11"
     }
 }
